working on two db, works